# async-pool

./: .gitignore  CMakeLists.txt  README.md  viz.sh
cmake/: deps.cmake
include/async-pool/: pool.hpp
tests/: main.cpp
